# foundations-tutor

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml
foundations_tutor/: __main__.py  app.py  config.py
foundations_tutor/catalog/: models.py
foundations_tutor/data/: catalog.yaml  default_config.yaml  identity.md
foundations_tutor/pages/: catalog.py  lesson.py  progress.py  settings.py
foundations_tutor/progress/: tracker.py
foundations_tutor/tutor/: agent.py  grading.py  session.py
tests/: test_imports.py
