[tool.poetry]
name = "foundations-tutor"
version = "0.1.0"
description = "AI-powered tutor for foundational LLM papers with progressive math scaffolding"
readme = "README.md"
license = "MIT"
authors = ["Chocaholic Monk <tylerjhayden@gmail.com>"]
homepage = "https://github.com/tylerjhayden/foundations-tutor"
packages = [{ include = "foundations_tutor" }]
include = ["foundations_tutor/data/**/*"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
anthropic = ">=0.45.0"
streamlit = ">=1.42.0,<2.0"
pyyaml = ">=6.0"
pydantic = ">=2.0,<3.0"
fsrs = ">=6.0,<7.0"
networkx = ">=3.0"
pyvis = ">=0.3"
python-dotenv = ">=1.0"
click = ">=8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.24"
pre-commit = ">=4.0"
ruff = ">=0.9"
detect-secrets = ">=1.5"

[tool.poetry.scripts]
foundations-tutor = "foundations_tutor.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
